<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="net.aptivist.covidmappproject.ui.map.view.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="net.aptivist.covidmappproject.ui.map.view.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_map" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_advsearch"
        android:name="net.aptivist.covidmappproject.ui.advancedsearch.view.AdvSearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_advsearch" />

    <fragment
        android:id="@+id/nav_tips"
        android:name="net.aptivist.covidmappproject.ui.tips.view.TipsFragment"
        android:label="@string/menu_tips"
        tools:layout="@layout/fragment_tips" />
</navigation>